syntax = "proto3";

option csharp_namespace = "Profilum.UserService";

package Profilum.UserService;

// The user service definition.
service UserService {

  rpc GetAllUsers (EmptyRequest) returns (stream UserFullReply);
  
  rpc GetUser (UserGetRequest) returns (UserFullReply);

  rpc CreateUser (UserCreateRequest) returns (UserFullReply);

  rpc UpdateUser (UserCreateRequest) returns (UserFullReply);

  rpc DeleteUser (UserGetRequest) returns (EmptyReply);

  rpc DeleteAllUsers (EmptyRequest) returns (EmptyReply);
}

message EmptyRequest {
}


message UserGetRequest {
  string id = 1;
}

message UserCreateRequest {
  string id = 1;
	string name = 2;
}

message EmptyReply {
  int32 replyStateCode = 1;
}

message UserFullReply {
  int32 replyStateCode = 1;
  string id = 2;
  string name = 3;
}